--- a/sections/references-en.html
+++ b/sections/references-en.html
@@ -1,47 +1,18 @@
-
-
 <div id="references">
 	<h2 id="ref" class="list">References <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-
-      	<ul>
-	<li id="bib-DaQ"><strong>[DaQ]</strong>
-	    
-	    Jeremy Debattista; Christoph Lange; Sören Auer. <a href="http://ceur-ws.org/Vol-1184/ldow2014_paper_09.pdf" property="dc:references"><cite>daQ, an Ontology for Dataset Quality Information</cite></a>. 2014. LDOW 2014. URL: <a href="http://ceur-ws.org/Vol-1184/ldow2014_paper_09.pdf" property="dc:references">http://ceur-ws.org/Vol-1184/ldow2014_paper_09.pdf</a>
-
-	
-	</li>
-	<li id="bib-PROV-O"><strong>[PROV-O]</strong>
-	
-	      Timothy Lebo; Satya Sahoo; Deborah McGuinness. W3C. <a href="https://www.w3.org/TR/prov-o/" property="dc:references"><cite>PROV-O: The PROV Ontology</cite></a>. 30 April 2013. W3C Recommendation. URL: <a href="https://www.w3.org/TR/prov-o/" property="dc:references">https://www.w3.org/TR/prov-o/</a>       
-
-	
-	</li>
-	
-		<!-- 	<li id="bib-SHACL"><strong>[SHACL]</strong>
-	
-	    Holger Knublauch; Arthur Ryman. <a href="https://www.w3.org/TR/shacl/" property="dc:references"><cite>Shapes Constraint Language (SHACL)</cite></a>. 28 January 2016. W3C Working Draft. URL: <a href="https://www.w3.org/TR/shacl/" property="dc:references">https://www.w3.org/TR/shacl/</a>        
-
-	
-	</li> -->
-
-
-	<li id="bib-ZaveriEtAl">
-	<strong>[ZaveriEtAl]</strong>
-	
-	     Amrapali Zaveri; Anisa Rula; Andrea Maurino; Ricardo Pietrobon; Jens Lehmann; Sören Auer. <a href="https://dx.doi.org/10.3233/SW-150175" property="dc:references"><cite>Quality assessment for Linked Data: A Survey</cite></a>. Semantic Web, vol. 7, no. 1, pp. 63-93, 2015. URL: <a href="https://dx.doi.org/10.3233/SW-150175" property="dc:references">https://dx.doi.org/10.3233/SW-150175</a>
-
-	
-	
-	</li>
-	<li id="bib-DQV"><strong>[DQV]</strong>
-	
-	
-	      Riccardo Albertoni,; Antoine Isaac. <a href="https://www.w3.org/TR/vocab-dqv/"  property="dc:references"><cite> Data on the web best practices: Data quality vocabulary. (DQV)</cite></a> . 15 December 2016. W3C Working Draft. URL: <a href="https://www.w3.org/TR/vocab-dqv/"  property="dc:references">https://www.w3.org/TR/vocab-dqv/</a>   
-
-	
-	
-	</li>
+    <ul>
+		<li id="bib-LODE">
+		<strong>[LODE]</strong>
+			 Ryan Shaw; Rapha ̈el Troncy; Lynda Hardman . <a href="https://escholarship.org/content/qt4pd6b5mh/qt4pd6b5mh.pdf" 
+			 property="dc:references"><cite>LODE: Linking Open Descriptions of Events</cite></a>. 
+			 
+			 In Asian semantic web conference (pp. 153-167), (2009). 
+			  <a href="https://escholarship.org/content/qt4pd6b5mh/qt4pd6b5mh.pdf" property="dc:references">Link</a>
+		</li>
+		<li id="bib-DSNotify"><strong>[DSNotify]</strong>
+			  Niko Popitsch; Bernhard Haslhofer. <a href="https://deliverypdf.ssrn.com/delivery.php?ID=723089121105084083077009069083009023050031035064008038064029125120125004045066091072041122047018010004033095126108126000081106007002102126119127075110029126102068085118119006099005072029&EXT=pdf&INDEX=TRUE"  property="dc:references"><cite> DSNotify – A Solution For Event Detection And Link Maintenance in
+Dynamic Datasets</cite></a> Journal of Web Semantics, 9(3), 266-283, (2011). <a href="https://deliverypdf.ssrn.com/delivery.php?ID=723089121105084083077009069083009023050031035064008038064029125120125004045066091072041122047018010004033095126108126000081106007002102126119127075110029126102068085118119006099005072029&EXT=pdf&INDEX=TRUE"  property="dc:references">Link/</a>   
+		</li>
 	</ul>
-
 </div>
 
