--- a/sections/description-en.html
+++ b/sections/description-en.html
@@ -6,10 +6,7 @@ The ontology has been assessed using the <a href="https://oops.linkeddata.es/ind
 <img src="./images/oops_free.png" alt="Free of pitfalls" width="100" height="69.6">
 <br>
 <h5 style="font-weight: bold;">Sample Graph</h5>
-A sample graph has been generated represented using PMO which relates 
-to the servers availability (<span style="font-family: 'Courier New'">"up"</span>). The metric has a value 
-(<span style="font-family: 'Courier New'">pmo:hasValue</span>) of
-<span style="font-family: 'Courier New'">"1"</span> if available and <span style="font-family: 'Courier New'">"0"</span> if not available: 
+A sample graph has been generated which shows changes detected between two XML files: 
  <a href="https://raw.githubusercontent.com/alex-randles/Prometheus-Metric-Ontology/main/example_prometheus_metric.ttl" target="_blank" >Graph Link</a>
 <br>
 <h5 style="font-weight: bold;">Ontology Comptency question</h5>
