--- a/sections/description-en.html
+++ b/sections/description-en.html
@@ -7,8 +7,8 @@ The ontology has been assessed using the <a href="https://oops.linkeddata.es/ind
 <br>
 <h5 style="font-weight: bold;">Sample Graph</h5>
 A sample graph has been generated which shows changes detected between two XML files: 
- <a href="https://raw.githubusercontent.com/alex-randles/Prometheus-Metric-Ontology/main/example_prometheus_metric.ttl" target="_blank" >Graph Link</a>
+ <a href="https://raw.githubusercontent.com/alex-randles/Test-Github-Pages/main/example_instances.ttl" target="_blank" >Graph Link</a>
 <br>
 <h5 style="font-weight: bold;">Ontology Comptency question</h5>
-Ontology Comptency questions have been created for the ontology: <a href="https://drive.google.com/file/d/1m_-VmXDi5XqdO-SEn4ky-MU42c8E4xbh/view?usp=sharing" target="_blank">Competency Questions Link</a>
+Ontology Comptency questions have been created for the ontology: <a href="" target="_blank">Competency Questions Link</a>
  
