--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -1,6 +1,6 @@
 <h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <figure>
-  <img src="./images/class_interaction.png" alt="Class Interaction Diagram" style="width:100%">
+  <img src="./images/class_interaction.png" alt="Class Interaction Diagram"  width="75" height="50">
   <figcaption><strong>Fig.1</strong>- Ontology Class Interaction Diagram.</figcaption>
   <br>
 </figure> 
