--- a/sections/crossref-en.html
+++ b/sections/crossref-en.html
@@ -55,6 +55,8 @@ This section provides details for each class and property defined by Change Dete
                title="https://change-detection-ontology.adaptcentre.ie/#hasChange">hasChange</a>
             <sup class="type-op" title="object property">op</sup>, <a href="#hasCurrentSource"
                title="https://change-detection-ontology.adaptcentre.ie/#hasCurrentSource">hasCurrentSource</a>
+            <sup class="type-op" title="object property">op</sup>, <a href="#hasNotificationPolicy"
+               title="https://change-detection-ontology.adaptcentre.ie/#hasNotificationPolicy">hasNotificationPolicy</a>
             <sup class="type-op" title="object property">op</sup>, <a href="#hasOwner"
                title="https://change-detection-ontology.adaptcentre.ie/#hasOwner">hasOwner</a>
             <sup class="type-op" title="object property">op</sup>, <a href="#hasPreviousSource"
@@ -239,6 +241,10 @@ This section provides details for each class and property defined by Change Dete
             title="https://change-detection-ontology.adaptcentre.ie/#hasCurrentSource">hasCurrentSource</a>
       </li>
       <li>
+         <a href="#hasNotificationPolicy"
+            title="https://change-detection-ontology.adaptcentre.ie/#hasNotificationPolicy">hasNotificationPolicy</a>
+      </li>
+      <li>
          <a href="#hasOwner"
             title="https://change-detection-ontology.adaptcentre.ie/#hasOwner">hasOwner</a>
       </li>
@@ -328,6 +334,39 @@ This section provides details for each class and property defined by Change Dete
                   target="_blank"
                   title="http://www.w3.org/2000/01/rdf-schema#Resource">resource</a>
                <sup class="type-c" title="class">c</sup>
+            </dd>
+         </dl>
+      </div>
+   </div>
+   <div class="entity" id="hasNotificationPolicy">
+      <h3>hasNotificationPolicy<sup class="type-op" title="object property">op</sup>
+         <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#objectproperties">Object Property ToC</a>
+         </span>
+      </h3>
+      <p>
+         <strong>IRI:</strong> https://change-detection-ontology.adaptcentre.ie/#hasNotificationPolicy</p>
+      <div class="comment">
+         <span class="markdown">The notification policy associated with the change log.</span>
+      </div>
+      <dl class="definedBy">
+         <dt>Is defined by</dt>
+         <dd>
+            <a href="https://change-detection-ontology.adaptcentre.ie/#">https://change-detection-ontology.adaptcentre.ie/#</a>
+         </dd>
+      </dl>
+      <div class="description">
+         <dl>
+            <dt>has domain</dt>
+            <dd>
+               <a href="#ChangeLog"
+                  title="https://change-detection-ontology.adaptcentre.ie/#ChangeLog">ChangeLog</a>
+               <sup class="type-c" title="class">c</sup>
+            </dd>
+            <dt>has range</dt>
+            <dd>
+               <a href="http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiPolicy.owl#Policy"
+                  target="_blank"
+                  title="http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiPolicy.owl#Policy">policy</a>
             </dd>
          </dl>
       </div>
