--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -41,6 +41,10 @@ This ontology has the following classes and properties.</span>
          title="https://change-detection-ontology.adaptcentre.ie/#hasCurrentSource">hasCurrentSource</a>
    </li>
    <li>
+      <a href="#hasNotificationPolicy"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasNotificationPolicy">hasNotificationPolicy</a>
+   </li>
+   <li>
       <a href="#hasOwner"
          title="https://change-detection-ontology.adaptcentre.ie/#hasOwner">hasOwner</a>
    </li>
