--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -1,6 +1,17 @@
 <h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<span class="markdown">
-This is a place holder text for the introduction. The introduction should briefly describe the ontology, its motivation, state of the art and goals.</span>
+
+<p>The ontology extends the LODE ontology <a href="#bib-LODE">[LODE]</a> which is designed to represent Linked data Events. The design
+has been inspired by the state of the art in Linked data change detection <a href="#bib-DSNotify">[DSNotify]</a>. 
+<strong>Fig.1</strong> shows the class interaction diagram for the ontology.
+</p>
+<br>
+<figure style="text-align: center;">
+  <img src="./images/class_interaction.png" alt="Class Interaction Diagram"  width="75%" height="50%">
+  <figcaption><strong>Fig.1</strong>- Ontology Class Interaction Diagram.</figcaption>
+  <br>
+</figure> 
+
+
 <div id="namespacedeclarations">
 <h3 id="ns" class="list">Namespace declarations</h3>
 <div id="ns" align="center">
