--- a/sections/references-en.html
+++ b/sections/references-en.html
@@ -1,5 +1,20 @@
-
-<h2 id="ref" class="list">References <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<span class="markdown">
-Add your references here. It is recommended to have them as a list.</span>
+<div id="references">
+	<h2 id="ref" class="list">References <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+    <ul>
+		<li id="bib-LODE">
+		<strong>[LODE]</strong>
+			 Ryan Shaw; Rapha ̈el Troncy; Lynda Hardman . <a href="https://escholarship.org/content/qt4pd6b5mh/qt4pd6b5mh.pdf" 
+			 property="dc:references" target="_blank"><cite>LODE: Linking Open Descriptions of Events</cite></a>. 
+			 
+			 In Asian semantic web conference (pp. 153-167), (2009). 
+			  <a href="https://escholarship.org/content/qt4pd6b5mh/qt4pd6b5mh.pdf" target="_blank" property="dc:references">Link</a>
+		</li>
+		<br>
+		<li id="bib-DSNotify"><strong>[DSNotify]</strong>
+			  Niko Popitsch; Bernhard Haslhofer. <a href="https://deliverypdf.ssrn.com/delivery.php?ID=723089121105084083077009069083009023050031035064008038064029125120125004045066091072041122047018010004033095126108126000081106007002102126119127075110029126102068085118119006099005072029&EXT=pdf&INDEX=TRUE"  property="dc:references" target="_blank"><cite> DSNotify – A Solution For Event Detection And Link Maintenance in
+Dynamic Datasets</cite></a> Journal of Web Semantics, 9(3), 266-283, (2011). 
+<a href="https://deliverypdf.ssrn.com/delivery.php?ID=723089121105084083077009069083009023050031035064008038064029125120125004045066091072041122047018010004033095126108126000081106007002102126119127075110029126102068085118119006099005072029&EXT=pdf&INDEX=TRUE" target="_blank" property="dc:references">Link</a>   
+		</li>
+	</ul>
+</div>
 
