--- a/sections/description-en.html
+++ b/sections/description-en.html
@@ -6,7 +6,9 @@ The ontology has been assessed using the <a href="https://oops.linkeddata.es/ind
 <img src="./images/oops_free.png" alt="Free of pitfalls" width="100" height="69.6">
 <br>
 <h5 style="font-weight: bold;">Sample Graph</h5>
-A sample graph has been generated which shows changes detected between the RML test case files ( <a href="https://raw.githubusercontent.com/kg-construct/rml-test-cases/master/test-cases/RMLTC0002a-CSV/student.csv" target="_blank">V1</a>, <a href="https://raw.githubusercontent.com/kg-construct/rml-test-cases/master/test-cases/RMLTC0009a-CSV/student.csv" target="_blank">V2</a> )
+A sample graph has been generated which shows changes detected between the <a href="https://rml.io/test-cases/">RML test case</a> files:
+ ( <a href="https://raw.githubusercontent.com/kg-construct/rml-test-cases/master/test-cases/RMLTC0002a-CSV/student.csv" target="_blank"> V1 </a>
+ <a href="https://raw.githubusercontent.com/kg-construct/rml-test-cases/master/test-cases/RMLTC0009a-CSV/student.csv" target="_blank"> V2 </a> )
 <br>
  <a href="https://raw.githubusercontent.com/alex-randles/Change-Detection-Ontology/main/example_instances.ttl" target="_blank" >Graph Link</a>
 <br>
