--- a/sections/description-en.html
+++ b/sections/description-en.html
@@ -1,4 +1,5 @@
-<h2 id="desc" class="list">Change Detection Ontology (CDO): Description <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<h2 id="desc" class="list">Prometheus Metric Ontology (PMO): Description <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+
 
 <h5 style="font-weight: bold;">Ontology Pitfall Scanner</h5>
 The ontology has been assessed using the <a href="https://oops.linkeddata.es/index.jsp"  target="_blank">Ontology Pitfall Scanner</a> and no design anomalies have been found. 
@@ -6,12 +7,12 @@ The ontology has been assessed using the <a href="https://oops.linkeddata.es/ind
 <img src="./images/oops_free.png" alt="Free of pitfalls" width="100" height="69.6">
 <br>
 <h5 style="font-weight: bold;">Sample Graph</h5>
-A sample graph has been generated which shows changes detected between the <a href="https://rml.io/test-cases/">RML test case</a> files:
- ( <a href="https://raw.githubusercontent.com/kg-construct/rml-test-cases/master/test-cases/RMLTC0002a-CSV/student.csv" target="_blank"> V1 </a>
- <a href="https://raw.githubusercontent.com/kg-construct/rml-test-cases/master/test-cases/RMLTC0009a-CSV/student.csv" target="_blank"> V2 </a> )
-<br>
- <a href="https://raw.githubusercontent.com/alex-randles/Change-Detection-Ontology/main/example_instances.ttl" target="_blank" >Graph Link</a>
+A sample graph has been generated represented using PMO which relates 
+to the servers availability (<span style="font-family: 'Courier New'">"up"</span>). The metric has a value 
+(<span style="font-family: 'Courier New'">pmo:hasValue</span>) of
+<span style="font-family: 'Courier New'">"1"</span> if available and <span style="font-family: 'Courier New'">"0"</span> if not available: 
+ <a href="https://raw.githubusercontent.com/alex-randles/Prometheus-Metric-Ontology/main/example_prometheus_metric.ttl" target="_blank" >Graph Link</a>
 <br>
 <h5 style="font-weight: bold;">Ontology Comptency question</h5>
-Ontology Comptency questions have been created for the ontology: <a href="https://drive.google.com/file/d/1FgJPlg_OPqadS0W4aEVigZ7fMeVfAn0Q/view?usp=sharing" target="_blank">Competency Questions Link</a>
+Ontology Comptency questions have been created for the ontology: <a href="https://drive.google.com/file/d/1m_-VmXDi5XqdO-SEn4ky-MU42c8E4xbh/view?usp=sharing" target="_blank">Competency Questions Link</a>
  
