--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -1,16 +1,11 @@
 <h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 
-<p>The ontology extends the LODE ontology <a href="#bib-LODE">[LODE]</a> which is designed to represent Linked data Events. The design
-has been inspired by the state of the art in Linked data change detection <a href="#bib-DSNotify">[DSNotify]</a>. 
-<strong>Fig.1</strong> shows the class interaction diagram for the ontology.
-</p>
-<br>
-<figure style="text-align: center;">
-  <img src="./images/class_interaction.png" alt="Class Interaction Diagram"  width="75%" height="50%">
+<figure>
+  <img src="./images/class_interaction.png" alt="Class Interaction Diagram" style="width:100%">
   <figcaption><strong>Fig.1</strong>- Ontology Class Interaction Diagram.</figcaption>
   <br>
+  <p>More information on Prometheus labels can be found <a target="_blank" href="https://prometheus.io/docs/practices/naming/">here</a></p>
 </figure> 
-
 
 <div id="namespacedeclarations">
 <h3 id="ns" class="list">Namespace declarations</h3>
@@ -18,19 +13,15 @@ has been inspired by the state of the art in Linked data change detection <a hre
 <table>
 <caption> <a href="#ns"> Table 1</a>: Namespaces used in the document </caption>
 <tbody>
-<tr><td><b>cdo</b></td><td>&lt;https://change-detection-ontology.adaptcentre.ie/#&gt;</td></tr>
+<tr><td><b>pmo</b></td><td>&lt;https://prometheus-metric-ontology.ericsson.com/#&gt;</td></tr>
 <tr><td></td><td></td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
 <tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
 <tr><td><b>terms</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
 <tr><td><b>xml</b></td><td>&lt;http://www.w3.org/XML/1998/namespace&gt;</td></tr>
-<tr><td><b>ReiConstraint</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiConstraint.owl&gt;</td></tr>
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
-<tr><td><b>DUL</b></td><td>&lt;http://www.ontologydesignpatterns.org/ont/dul/DUL.owl&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
-<tr><td><b>ReiPolicy</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiPolicy.owl&gt;</td></tr>
 <tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
-<tr><td><b>ontology</b></td><td>&lt;http://linkedevents.org/ontology&gt;</td></tr>
 </tbody>
 </table>
 </div>
