--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -29,6 +29,10 @@ This ontology has the following classes and properties.</span>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
+      <a href="#effectedBy"
+         title="https://prometheus-metric-ontology.ericsson.com/#effectedBy">effectedBy</a>
+   </li>
+   <li>
       <a href="#effectsMetric"
          title="https://prometheus-metric-ontology.ericsson.com/#effectsMetric">effectsMetric</a>
    </li>
@@ -336,6 +340,10 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#hasRelease"
          title="https://prometheus-metric-ontology.ericsson.com/#hasRelease">hasRelease</a>
+   </li>
+   <li>
+      <a href="#hasResultStatus"
+         title="https://prometheus-metric-ontology.ericsson.com/#hasResultStatus">hasResultStatus</a>
    </li>
    <li>
       <a href="#hasResultType"
