--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -1,6 +1,10 @@
 <h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<span class="markdown">
-This is a place holder text for the introduction. The introduction should briefly describe the ontology, its motivation, state of the art and goals.</span>
+<figure>
+  <img src="./images/class_interaction.png" alt="Class Interaction Diagram" style="width:100%">
+  <figcaption><strong>Fig.1</strong>- Ontology Class Interaction Diagram.</figcaption>
+  <br>
+  <p>More information on Prometheus labels can be found <a target="_blank" href="https://prometheus.io/docs/practices/naming/">here</a></p>
+</figure> 
 <div id="namespacedeclarations">
 <h3 id="ns" class="list">Namespace declarations</h3>
 <div id="ns" align="center">
